force-app/main/default/objects/DESKSCMT__Desk_Topic_Migration__c/DESKSCMT__Desk_Topic_Migration__c.object-meta.xml
<CustomObject>
    <description>Temporary Object for Desk Topics</description>
    <label>Desk Topic Migration</label>
    <nameField>
        <displayFormat>DTM-{0000}</displayFormat>
        <label>Desk Topic Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Topic Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>