force-app/main/default/objects/DESKSCMT__Desk_Topic_Migration__c/fields/DESKSCMT__Description__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>