force-app/main/default/objects/DESKSCMT__Desk_Topic_Migration__c/fields/DESKSCMT__In_Support_Center__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__In_Support_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Support Center</label>
    <type>Checkbox</type>
</CustomField>