force-app/main/default/objects/DESKSCMT__Desk_Topic_Migration__c/fields/DESKSCMT__Name__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>