force-app/main/default/objects/DESKSCMT__Desk_Topic_Migration__c/fields/DESKSCMT__Position__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Position__c</fullName>
    <label>Position</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>