force-app/main/default/objects/DESKSCMT__Desk_Topic_Migration__c/fields/DESKSCMT__Topic_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Topic_Id__c</fullName>
    <label>Topic Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>