force-app/main/default/objects/DESKSCMT__Desk_Topic_Migration__c/listViews/DESKSCMT__All.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__All</fullName>
    <columns>NAME</columns>
    <columns>DESKSCMT__Topic_Id__c</columns>
    <columns>DESKSCMT__Name__c</columns>
    <columns>DESKSCMT__Position__c</columns>
    <columns>DESKSCMT__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>