force-app/main/default/objects/DESKSCMT__Desk_Topic_Migration__c/listViews/DESKSCMT__Failed_Topics.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__Failed_Topics</fullName>
    <columns>NAME</columns>
    <columns>DESKSCMT__Name__c</columns>
    <columns>DESKSCMT__Description__c</columns>
    <columns>DESKSCMT__Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Error__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Failed Topics</label>
</ListView>